--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -489,6 +489,7 @@ Upon entering the browsing and search menu, a search text or icon will always be
 \newline
 
 \noindent The search will also provide suggestions as the user types out the term. There will be an option to sort by category specifically or a date. When the user selects a form that they have found, options to view, edit, email, and print will appear.
+\newline
 
 \begin{figure}[h]
 \centering
@@ -496,7 +497,11 @@ Upon entering the browsing and search menu, a search text or icon will always be
 \caption{Search screen}
 \end{figure}
 \newpage
-\noindent Three categories will be arranged underneath the header. The categories are restaurants, wells, and septic tanks. Each category can be scrolled horizontally similar to Netflix's category functionality. Thumbnails of each document are sorted by most recent left to right.
+\noindent Three categories will be arranged underneath the header. These categories are restaurants, wells, and septic tanks. A row of documents will present each of these categories and each one will have its own scroll bar. Each document is represented by a thumbnail and will be sorted by most recent starting from left to right.
+\newline
+
+\noindent This design for browsing is inspired by Netflix's browsing menus on both their website and mobile applications. The user is greeted with the most recent information entered into the tablet database and shows documents from all three categories of the project. Thumbnail icons are a great way to show the type of documents and any vital information about that document.
+\newline
 
 \begin{figure}
     \centering
@@ -511,6 +516,8 @@ Upon entering the browsing and search menu, a search text or icon will always be
 \end{figure}
 \newpage
 \noindent When the user taps on a category, it expands the category to the full screen and displays all of the document thumbnails in that category with a vertical scroll. When the user taps on a thumbnail, there will be options to view, edit, email, and print.
+\newline
+
 \begin{figure}[H]
 \centering
 \includegraphics[width=3.5in,height=5in]{Specific_Category_Restaurants.png}
