--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -515,7 +515,10 @@ Upon entering the browsing and search menu, a search text or icon will always be
      \caption{Browse by category/date screens}
 \end{figure}
 \newpage
-\noindent When the user taps on a category, it expands the category to the full screen and displays all of the document thumbnails in that category with a vertical scroll. When the user taps on a thumbnail, there will be options to view, edit, email, and print.
+\noindent When the user taps on one of the three rows of categories, it expands the tapped category to the full screen and displays all of the document thumbnails in that category. The document thumbnails are sorted by most recent starting left to right while going top to bottom. The user can scroll vertically to view more document thumbnails. A user can tap on a thumbnail on the screen and options to view, edit, email, and print will be displayed.
+\newline
+
+\noindent This option for browsing may be a quicker way to find documents since it filters by document type to start and displays more thumbnails on the screen at once compared to the rows that are displayed by default.
 \newline
 
 \begin{figure}[H]
